# bonsol

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .talismanrc  CHANGELOG.md  Cargo.toml  Dockerfile.cuda  Dockerfile.standard  Dockerfile.test  Node.toml  README.md  Readme_git_hooks.md  TESTING-FORK-PRS.md  _typos.toml  deny.toml  docker-compose.yaml  node_keypair.json  pnpm-lock.yaml  pnpm-workspace.yaml  recipe.json  rustfmt.toml  test-fork-ci.sh
.cursor-rules/: 1003-flatbuffers-patterns.mdc
.devcontainer/: devcontainer.json
.github/comment-templates/: check.yaml  fmt.yaml
.github/docker/: Dockerfile.build
.github/workflows/: build-ci-container.yaml  build-containers.yaml  build-node-containers.yaml  pr-workflow.yaml  prover-artifacts-to-s3.yaml  release-workflow.yaml  release.yaml  test-node-build.yaml  unittest_coverage_report.yaml
bonfire/: Cargo.toml
bonfire/src/: lib.rs  main.rs  protocol.rs  web.rs
bonfire/src/log_persister/: buffer_manager.rs  mod.rs
bonfire/tests/: web_tests.rs
charts/: README.md  values.yaml
charts/input_files/: simple_execution_request.json  simple_execution_request_callback.json  simple_manifest.json
charts/templates/: _helpers.tpl  configmap_tester.yaml  deployment-provernode.yaml  svc-provernode.yaml
cli/: .talismanrc  Cargo.toml  README.md
cli/src/: build.rs  command.rs  common.rs  deploy.rs  error.rs  estimate.rs  execute.rs  init.rs  lib.rs  logs.rs  main.rs  pda.rs  prove.rs  read_receipt.rs
cli/src/tests/test_data/: test_id.json  test_manifest.json
docker/: Dockerfile  Dockerfile.both  Dockerfile.citest  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.full  Dockerfile.github-actions-ci  Dockerfile.node  Dockerfile.slim  Dockerfile.standard  Dockerfile.stark  Dockerfile.test  bonsol-node.sh  ci-entry.sh  docker-compose.elasticsearch.yml
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/docs/contributing/: contributing.mdx
docs/docs/explanation/: bonsol-architecture.md  bonsol-architecure.md  bonsol-input-types.md  what-is-bonsol.md
docs/docs/how-to-guides/: interact-with-contracts.md  optimize-zkprograms.md  provision-a-bonsol-node.md  run-a-bonsol-node-on-k8s.md  upgrade-a-zkprogram.md  verify-http-request.md
docs/docs/how-to-guides/setup/: docker-wsl.mdx
docs/docs/reference/: cli-commands.md  contract-interfaces.md
docs/docs/shared/: build.mdx  cli-tip.mdx  deploy.mdx  execute.mdx  prereq-contrib.mdx  prereq.mdx  prove.mdx
docs/docs/tutorials/: a-taste-of-bonsol.mdx
docs/src/components/PowPowDemo/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
elasticsearch/: Cargo.toml
elasticsearch/src/: lib.rs  model.rs  store.rs  tests.rs
getting-started/: installation.md
gitbook/: README.md  SUMMARY.md  cli-commands.md
gitbook/contributing/: contributing-to-docs.md  contributor-guidelines.md
gitbook/core-concepts/: architecture.md  introduction.md
gitbook/developers/: ai-ocr-example.md  bonsol-calculator-example.md  input-format-guide.md  setup-a-local-environment.md  tutorial-simple-program.md
gitbook/developers/tutorials/: README.md  simple-program.md  using-callbacks-from-programs.md  using-callbacks.md
gitbook/getting-started/: installation.md  quickstart.md
gitbook/provers/: setup-a-prover-node.md
gitbook/provers/setup-a-prover-node/: README.md  manually-provision-a-bonsol-node.md
gitbook/qcash/: overview.md
images/8bitoracle-iching/: .env.example  Cargo.toml  README.md  input.json
images/8bitoracle-iching/scripts/: 01-build.sh  02-deploy.sh  03-generate-input.sh  04-execute.sh  README.md
images/8bitoracle-iching/src/: main.rs  types.rs  utils.rs
images/dkpgen/src/: main.rs
images/dkpverify/: README.md
images/range/: Cargo.toml
images/range/src/: main.rs
images/simple/: Cargo.toml
images/simple/src/: main.rs
local-zk-program-server/: Cargo.toml
local-zk-program-server/src/: main.rs
node/: Cargo.toml  config-test.toml
node/src/: config  config.rs  main.rs
node/src/ingest/: block_subscription.rs  bonfire.rs  grpc_stream.rs  mod.rs
node/src/observe/: mod.rs
node/src/risc0_runner/: mod.rs  verify_prover_version.rs
node/src/transaction_sender/: mod.rs  rpc.rs  status.rs  transaction_sender.rs
onchain/anchor-interface/: Cargo.toml
onchain/bonsol/: Cargo.toml
onchain/bonsol/src/: bonsol-keypair.json  error.rs  program.rs  proof_handling.rs  prover.rs  utilities.rs
onchain/bonsol/src/actions/: callback.rs  claim.rs  mod.rs  proof.rs  status.rs
onchain/example-program-on-bonsol/: Cargo.toml
onchain/example-program-on-bonsol/src/: lib.rs
onchain/interface/: Cargo.toml
onchain/interface/src/: claim_state.rs  instructions.rs  prover_version.rs
prover/: Cargo.toml
prover/src/: image.rs  input_resolver.rs  lib.rs  prover.rs  util.rs
schemas/: Cargo.toml  build.rs
schemas-rust/: Cargo.toml  build.rs
schemas-ts/: channel-instruction-ix-type.ts  channel-instruction.ts  channel_instruction.ts
schemas/flatbuffers/: channel_instruction.fbs  claim_v1.fbs  deploy_v1.fbs  execution_request_v1.fbs  input_type.fbs
schemas/src/: channel_instruction_generated.rs  execution_request_v1_generated.rs  input_type_generated.rs  lib.rs
sdk/: Cargo.toml
sdk/src/: client.rs  lib.rs
tester/: Cargo.toml
tester/src/: main.rs
vkey/: README.md
