[workspace.metadata.crane]
name = "bonsol"

[workspace]
members = [
  "iop",
  "onchain/bonsol",
  "onchain/interface",
  "onchain/example-program-on-bonsol",
  "node",
  "schemas",
  "cli",
  "sdk",
  "prover",
  "tester",
  "local-zk-program-server",
]


resolver = "2"
package.version = "0.5.0"

[workspace.dependencies]
solana-sdk = "~2.0"
thiserror = "1.0.57"
flatbuffers = "24.3.25"
solana-program = "~2.0"
solana-rpc-client = "~2.0"
solana-rpc-client-api = "~2.0"
solana-pubsub-client = "~2.0"
solana-transaction-status = "~2.0"
solana-account-decoder = "~2.0"
solana-cli-config = "~2.0"
yellowstone-grpc-client = "3.1.1"
yellowstone-grpc-proto = "3.1.1"
risc0-zkvm = { version = "2.0.0", features = [
  "prove",
], default-features = false }
risc0-core = { version = "2.0.0" }
risc0-zkp = { version = "2.0.1" }
risc0-groth16 = { version = "2.0.0" }
risc0-binfmt = { version = "2.0.0" }
risc0-circuit-recursion = { version = "2.0.0" }
risc0-zkvm-platform = { version = "2.0.0" }
risc0-circuit-rv32im = { version = "2.0.0" }
bonsol-interface = { version = "0.5.0", path = "./onchain/interface" }
bonsol-schema = { version = "0.5.0", path = "./schemas" }
bonsol-sdk = { version = "0.5.0", path = "./sdk" }
bonsol-prover = { version = "0.5.0", path = "./prover" }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
