[workspace.metadata.crane]
name = "bonsol"

[workspace]
members = [
  "iop",
  "onchain/bonsol",
  "onchain/interface",
  "onchain/example-program-on-bonsol",
  "node",
  "schemas",
  "cli",
  "sdk",
  "prover",
  "tester",
  "local-zk-program-server",
]


resolver = "2"
package.version = "0.6.0"

[workspace.dependencies]
solana-sdk = "2.3.1"
thiserror = "1.0.57"
flatbuffers = "24.3.25"
solana-program = "2.3.0"
solana-rpc-client = "2.3.6"
solana-rpc-client-api = "2.3.6"
solana-pubsub-client = "2.3.6"
solana-transaction-status = "2.3.6"
solana-account-decoder = "2.3.6"
solana-cli-config = "2.3.6"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"
risc0-zkvm = { version = "3.0.3", features = [
  "prove",
], default-features = false }
risc0-core = { version = "3.0.0" }
risc0-zkp = { version = "3.0.2" }
risc0-groth16 = { version = "3.0.2" }
risc0-binfmt = { version = "3.0.2" }
risc0-circuit-recursion = { version = "4.0.2" }
risc0-circuit-rv32im = { version = "4.0.2" }
risc0-zkvm-platform = { version = "2.2.0" }
risc0-build = { version = "3.0.3" }
bonsol-interface = { version = "0.6.0", path = "./onchain/interface" }
bonsol-schema = { version = "0.6.0", path = "./schemas" }
bonsol-sdk = { version = "0.6.0", path = "./sdk" }
bonsol-prover = { version = "0.6.0", path = "./prover" }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"
