[package]
name = "bonsol-bonfire"
version = "0.0.1"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-lab = "0.24.3"
anyhow = "1.0.100"
bincode = "2.0.1"
futures = "0.3.31"
paste = "1.0.15"
quinn = "0.11.9"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-client = { workspace = true }
solana-pubsub-client = { workspace = true}
solana-sdk = { workspace = true}
solana-transaction-status = { workspace = true }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
