[package]
name = "bonsol-elasticsearch"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = {version = "0.4.42", features = ["serde"]}
elasticsearch = "=8.17.0-alpha.1"
serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1.43"
url = "2.5.7"

[dev-dependencies]
tracing-subscriber = "0.3"

[lints]
workspace = true