[package]
name = "bonsol-prover"
version.workspace = true
description = "Zero-knowledge proof generation for Bonsol"
authors = ["anagram build team"]
repository = "https://github.com/bonsolcollective/bonsol"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
arrayref = "0.3.6"
bincode = "1.3.3"
bonsol-schema = { workspace = true }
bytes = "1.5.0"
futures-util = "0.3.30"
reqwest = { version = "0.11.26", features = [
  "gzip",
  "deflate",
  "stream",
  "native-tls-vendored",
] }
risc0-binfmt = { workspace = true }
risc0-zkvm = { workspace = true, features = ["prove"], default-features = false }
serde = { version = "1.0.197" }
serde_json = "1.0.104"
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-account-decoder.workspace = true
solana-sdk.workspace = true
tokio = "1.36.0"
tracing = "0.1"

[dev-dependencies]
mockito = "1.5.0"
