[package]
name = "bonsol-sdk"
version.workspace = true
description = "SDK for interacting with Bonsol protocol"
authors = ["anagram build team"]
repository = "https://github.com/bonsolcollective/bonsol"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bonsol-interface.workspace = true
bonsol-schema.workspace = true
bytes = "1.5.0"
flatbuffers = "24.3.25"
futures-util = "0.3.30"
num-traits = "0.2.16"
reqwest = { version = "0.11.26", features = [
  "gzip",
  "deflate",
  "stream",
  "native-tls-vendored",
] }
solana-rpc-client = "2.3.6"
solana-rpc-client-api = "2.3.6"
solana-sdk = "2.3.1"
tokio = "1.36.0"
