[package]
name = "iching"
version = "0.1.0"
edition = "2021"
publish = false   # Exclude local crates from licensing checks

[workspace]

[package.metadata.zkprogram]
input_order = ["Private"]  # Random seed is private input

[dependencies]
risc0-zkvm = { git = "https://github.com/anagrambuild/risc0", branch = "v1.0.1-bonsai-fix", default-features = false, features = [
  "std",
] }
dotenv = "0.15.0"
anyhow = "1.0"

[dependencies.sha2]
git = "https://github.com/risc0/RustCrypto-hashes"
tag = "sha2-v0.10.6-risczero.0" 