[package]
name = "bonsol-anchor-interface"
version.workspace = true
description = "Anchor Interface definitions for Bonsol"
authors = ["anagram build team"]
repository = "https://github.com/anagrambuild/bonsol"
license = "MIT"
edition = "2021"

[features]
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = ">=0.28"
bonsol-schema = "0.3.5"
bonsol-interface = { version = "0.4.5", path = "../interface", features = ["on-chain"], default-features = false }
paste = "1.0.12"


[lints.rust]
unused_macros = "allow"
